# agv_hybridAstar

./: .gitattributes  3-22.yaml  README.md  UseNote.txt  cartographer的yaw分析.txt  converMap.sh  install_guide  launch.sh  once_orin.sh  readme.txt  rmVscode.sh  saveSLAMMap.sh  save_slam_trajectory.sh  setting.conf  vehicle_control.sh
data/navigation/: trajectory.txt
src/: example.launch  real_time_slam_location.launch  reboot_slam.sh  vehicle_ctrl.launch
src/Hybrid_A_Star/: CMakeLists.txt  package.xml
src/Hybrid_A_Star/app/: run_hybrid_astar.1cpp  run_hybrid_astar.cpp
src/Hybrid_A_Star/data/: data.txt
src/Hybrid_A_Star/include/3rd/: backward.hpp
src/Hybrid_A_Star/include/hybrid_a_star/: goal_pose_subscriber.h  hybrid_a_star_flow.h  hybrid_a_star_flow0.h  segment_trajectory.h  simulate_goal_pose_subscriber.h  state_node.h
src/Hybrid_A_Star/launch/: run_hybrid_a_star.launch
src/Hybrid_A_Star/maps/: 3-22.yaml  xt_outdoor1.yaml
src/Hybrid_A_Star/rviz/: display_hybrid_astar.rviz
src/Hybrid_A_Star/src/: goal_pose_pub.cpp  goal_pose_subscriber.cpp  hybrid_a_star.cpp  hybrid_a_star_flow.1cpp  hybrid_a_star_flow.cpp  points_sub.cpp  segment_trajectory.cpp  simulate_goal_pose_subscriber.cpp
src/common/compute/src/: map.cpp
src/custom_msgs/: CMakeLists.txt
src/custom_msgs/msg/Astar/: Astar.msg  CommandWithPosition.msg
src/custom_msgs/msg/Map/: point.msg
src/interactive/link2app/: CMakeLists.txt  package.xml
src/interactive/link2app/launch/: link2app.launch
src/interactive/link2app/src/: main.cpp
src/interactive/link2app_fake/: CMakeLists.txt  package.xml
src/interactive/link2app_fake/launch/: link2app_fake.launch
src/interactive/link2app_fake/src/: main.cpp  udp_core.h
src/interactive/link2mysql/: CMakeLists.txt  package.xml
src/interactive/link2mysql/launch/: link2mysql.launch
src/interactive/link2mysql/src/: main.cpp  udp_core.h
src/interactive/test/: CMakeLists.txt  package.xml
src/interactive/test/src/: main.cpp
src/interactive/warning/: CMakeLists.txt  package.xml
src/interactive/warning/launch/: warning.launch
src/interactive/warning/src/: main.cpp
src/perception/detection/lidar_detection/filter/: CMakeLists.txt  package.xml
src/perception/detection/lidar_detection/filter/launch/: filter.launch
src/perception/detection/lidar_detection/filter/src/: main.cpp
src/perception/detection/lidar_detection/ground_segmentaion/: CMakeLists.txt  package.xml
src/perception/detection/lidar_detection/ground_segmentaion/launch/: ground_extract.launch  ground_extract_hesai.launch  ground_extract_leishen.launch
src/perception/detection/lidar_detection/ground_segmentaion/src/: groundplanfit.cpp  groundplanfit.h  groundplanfit_hesai.cpp  groundplanfit_hesai.h  groundplanfit_leishen.cpp  groundplanfit_leishen.h  points_converter.cpp
src/perception/detection/lidar_detection/lidar_trans_map/: CMakeLists.txt  package.xml
src/perception/detection/lidar_detection/lidar_trans_map/launch/: lidartrans.launch
src/perception/detection/lidar_detection/lidar_trans_map/src/: main.cpp
src/perception/tracking/fake_object_tracking/: CMakeLists.txt  package.xml
src/perception/tracking/fake_object_tracking/launch/: fake.launch
src/perception/tracking/fake_object_tracking/src/: dynamic_obj.cpp  fake_object_publisher.cpp
src/perception/tracking/obj_track/: CMakeLists.txt  package.xml
src/perception/tracking/obj_track/launch/: obj_track.launch
src/perception/tracking/obj_track/src/: association.cpp  association.h  kf.cpp  main.cpp
src/perception/tracking/object_track/: CMakeLists.txt  package.xml
src/perception/tracking/object_track/launch/: tracking.launch
src/perception/tracking/object_track/src/: data_association.cpp  data_association.h  main.cpp
src/perception/tracking/ukf/: CMakeLists.txt  package.xml
src/perception/tracking/ukf/launch/: ukf.launch
src/perception/tracking/ukf/src/: main.cpp  ukf.cpp  ukf.h
src/perception/v2x/obu/: CMakeLists.txt  package.xml
src/perception/v2x/obu/launch/: obu_node.launch  udp_obu_node.launch  udp_obu_node_turnlight.launch
src/perception/v2x/obu/src/: V2X_Thread.c  V2X_Thread.h  fake_v2x.cpp  obu_node.cpp  udp_obu_node.cpp  udp_obu_node_turnlight.cpp
src/perception/v2x/park/: CMakeLists.txt  package.xml
src/perception/v2x/park/launch/: fake_v2x.launch  park.launch
src/perception/v2x/park/src/: park.cpp  udp_core.h
src/planning/aeb/: CMakeLists.txt  package.xml
src/planning/aeb/launch/: aeb.launch
src/planning/aeb/src/: autoemergencybraking.cpp  autoemergencybraking.h  main.cpp
src/planning/interactive/: CMakeLists.txt  package.xml
src/planning/interactive/launch/: interactive.launch
src/planning/interactive/src/: main.cpp  msg.h  tcp_core.h  uart_api.cpp  udp_core.h
src/planning/mission_planning/task_exc/: CMakeLists.txt  package.xml
src/planning/mission_planning/task_exc/launch/: task_exc.launch
src/planning/mission_planning/task_exc/src/: task_server.cpp  task_server.h
src/planning/routing_planning/: CMakeLists.txt  package.xml
src/planning/udp_telecontrol_pkg/: CMakeLists.txt  package.xml
src/rrt_star_global_planner/: CMakeLists.txt  README.md
src/rrt_star_global_planner/data/: data.txt
src/rrt_star_global_planner/launch/: rrt_node.launch  run_rrt.launch  test_rrt.launch
src/rrt_star_global_planner/maps/: 111.yaml
src/rrt_star_global_planner/params/: test_rrt_star_planner1.yaml
src/rrt_star_global_planner/rviz/: display_rrt.rviz  rrt.rviz
src/rrt_star_global_planner/src/: goal_pose_pub.cpp  rrt_star_plan_node.cpp  rrt_star_ros.cpp
src/test/: CMakeLists.txt  package.xml
src/test/launch/: test.launch
src/test/src/: main.cpp
src/vehicle_control/get_data/: CMakeLists.txt  get_data_node.launch  package.xml
src/vehicle_control/lat_controller/: lat_controller_node.launch
src/vehicle_control/lon_controller/: CMakeLists.txt  lon_controller_node.launch  package.xml
src/vehicle_control/pix_robot_can/: CMakeLists.txt  package.xml  pix_robot_can.launch
src/vehicle_description/rviz_cfg/: debug.rviz
src/vehicle_description/urdf/: vehicle_3.urdf
(+128 files in other folders)
