<?xml version="1.0"?>
<package>
  <name>lidar_trans_map</name>
  <version>1.0.0</version>
  <description>The lidar_trans_map package</description>

  <maintainer email="504755617@qq.com">lmx</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>custom_msgs</build_depend>
  <build_depend>message_runtime</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>custom_msgs</run_depend>
  



  <export></export>
</package>
